# mcl.infirmary

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  buildout.cfg  mcl.infirmary.sublime-project  setup.cfg  setup.py
src/mcl/: __init__.py  __pycache__  sickbay
src/mcl/infirmary/: __init__.py  interfaces.py  main.py  resources.py  utils.py  views.py
