# 🏥 Infirmary: an API for Clinical Data for the Consortium for Molecular
# and Cellular Characterization of Screen-Detected Lesions — Package metadata

[metadata]
name = mcl.infirmary
version = attr: mcl.infirmary.VERSION
description = 🏥 Infirmary: an API for Clinical Data for the Consortium for Molecular and Cellular Characterization of Screen-Detected Lesions
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Sean Kelly
author_email = sean.kelly@jpl.nasa.gov
url = https://github.com/MCLConsortium/mcl.infirmary
keywords = rest api web clinical data lesions cancer
license = ALv2
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Pyramid
    Framework :: Buildout
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Database :: Front-Ends
    Topic :: Scientific/Engineering :: Bio-Informatics


[options]
zip_safe = True
include_package_data = True
packages = find_namespace:
package_dir =
    =src
install_requires =
    pyramid==1.9.4
    waitress==1.4.4
    pyramid_beaker==0.8
    pyramid_ldap==0.3.1
    zope.component==4.6.2
    zope.interface==5.1.0
    mcl.sickbay==0.0.5

# pyramid_ldap3 uses ldap3 which can't communicate with ldaps://edrn-ds.jpl.nasa.gov
# So stick with pyramid-1.9.4 and pyramid_ldap

[options.package_data]
* = *.txt, *.rst, *.md


[options.packages.find]
where = src


[options.extras_require]


[options.entry_points]
paste.app_factory =
    infirmary = mcl.infirmary.main:main
console_scripts =
    infirmary = mcl.infirmary.main:main
